fixing horizontal scrollbar

--- a/public/global.css
+++ b/public/global.css
@@ -45,6 +45,7 @@ body {
   margin: 0;
   padding: 0;
   width: 100vw;
+  max-width: 100%;
   height: 100vh;
   font-size: 15px;
   line-height: 150%;
